--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="css/style.css"/>
 </head>
 <body>
+<!--some comment-->
 <header>
     <h1>CSS Diner Shopping List</h1>
     <h3>Let's go to the mall!</h3>
